# digital-excellence-talent-hub

./: .env.example  .gitignore  README.md  app.py  candidates.json  index.html  pyproject.toml  requirements.txt  seed_db.py  supabase_schema.sql
ai/: cv_agent.py  jd_agent.py  utils.py
db/: db_functions.py
synthesis/: config.py  generator.py  models.py  pipeline.py  planner.py
